Fixes image file handling and refines styles
Replaces multiple landing page image files, ensuring up-to-date visual assets. Corrects CSS styling and alignment in 5Gbps and gaming sections for consistency and improved layout. Simplifies JSX structure for enhanced readability and maintainability.

Addresses layout issues and improves internationalization handling in the gaming section.

--- a/src/pages/personal/oferte/gaming/Gaming.module.css
+++ b/src/pages/personal/oferte/gaming/Gaming.module.css
@@ -26,7 +26,7 @@
   justify-content: space-between;
 }
 .info_block_text {
-  max-width: 50%;
+  max-width: 45%;
   width: 100%;
   padding: 50px 40px;
   box-sizing: border-box;
@@ -49,7 +49,7 @@
   max-width: 50%;
   width: 100%;
 }
-.info_block_img_mob{
+.info_block_img_mob {
   display: none;
 }
 .title_main {
@@ -110,18 +110,19 @@
   }
 
   .info_block_img {
-   display: none;
+    display: none;
   }
-  .info_block_img_mob{
+  .info_block_img_mob {
     display: block;
     width: 100%;
     max-width: 45%;
   }
-  .info_block{
+  .info_block {
     width: 880px;
   }
-  .info_block_text{
+  .info_block_text {
     width: 55%;
+    max-width: 55%;
   }
 }
 @media (max-width: 1150px) {
@@ -137,14 +138,14 @@
     width: 100%;
     max-width: 100%;
   }
-  .info_block_img_mob{
+  .info_block_img_mob {
     display: none;
   }
   .info_block {
     flex-direction: column-reverse;
     max-width: 580px;
   }
-  .info_block_text{
+  .info_block_text {
     width: 100%;
     max-width: 100%;
   }
@@ -167,23 +168,23 @@
 }
 
 @media (max-width: 650px) {
-  .info_block{
+  .info_block {
     width: 100%;
     max-width: 96vw;
   }
   .info_block_text {
     padding: 30px 20px;
   }
-  .info_block_text_title{
+  .info_block_text_title {
     font-size: 28px;
     line-height: 30px;
   }
-  .title_main{
+  .title_main {
     font-size: 26px;
     line-height: 28px;
     margin-bottom: -20px;
   }
-  .title_main_2{
+  .title_main_2 {
     margin-bottom: 30px;
   }
   .hero_img_tablet {
